Query multiple times the same prompt implemented.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h1 class="funky-title">DjOracle</h1>
     <h2 class="funky-subtitle">Your Musical Crystal Ball</h2>
     <input type="text" id="songQuery" placeholder="Enter a song, artist, or style">
-    <button id="consultDjOracleBtn">Consult the Oracle</button>
+<button id="consultDjOracleBtn">🔮 Consult the Oracle</button>
     <textarea id="suggestionsOutput" placeholder="Your curated playlist will appear here..." readonly></textarea>
   </main>
 
